--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  flutter_dotenv: 6.0.0
   permission_handler: ^11.3.1
   path_provider: ^2.1.2
   http: ^1.2.0
